<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple">

    <ImageView
        android:id="@+id/fragment_edit_account_imageview_back"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_edit_account_textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/account_edit_text_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_edit_account_edittext_email"
        app:layout_constraintStart_toStartOf="@+id/fragment_edit_account_edittext_email" />

    <EditText
        android:id="@+id/fragment_edit_account_edittext_email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/white"
        android:hint="@string/account_edit_prompt_email"
        android:inputType="textWebEmailAddress"
        android:paddingLeft="25dp"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_edit_account_textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/account_edit_text_username"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_edit_account_edittext_username"
        app:layout_constraintStart_toStartOf="@+id/fragment_edit_account_edittext_email" />

    <EditText
        android:id="@+id/fragment_edit_account_edittext_username"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/white"
        android:hint="@string/account_edit_prompt_username"
        android:inputType="textCapCharacters"
        android:paddingLeft="25dp"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_edit_account_edittext_email" />

    <Button
        android:id="@+id/fragment_edit_account_button_update"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/black"
        android:text="@string/account_edit_button_save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_edit_account_edittext_username" />

</androidx.constraintlayout.widget.ConstraintLayout>