<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_submit_review_frame_header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/payment_square_with_stroke"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_submit_review_imageview_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center |left"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_submit_review_textview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center | left"
            android:text="@string/reviews_submit_textview_header"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <ImageView
        android:id="@+id/fragment_submit_review_imageview_icon"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_add_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_submit_review_frame_header" />

    <RatingBar
        android:id="@+id/fragment_submit_review_rating_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:numStars="5"
        android:progressBackgroundTint="@color/light_grey"
        android:progressTint="@color/black"
        android:rating="1"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="@+id/fragment_submit_review_edittext_text"
        app:layout_constraintStart_toStartOf="@+id/fragment_submit_review_edittext_text"
        app:layout_constraintTop_toBottomOf="@+id/fragment_submit_review_imageview_icon" />

    <TextView
        android:id="@+id/fragment_submit_review_textview_text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="2dp"
        android:text="0/150"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_submit_review_edittext_text"
        app:layout_constraintEnd_toEndOf="@+id/fragment_submit_review_edittext_text" />

    <EditText
        android:id="@+id/fragment_submit_review_edittext_text"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_frame_with_stroke"
        android:gravity="top"
        android:hint="@string/reviews_submit_edittext_prompt"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_submit_review_imageview_icon" />

    <Button
        android:id="@+id/fragment_submit_review_button_submit"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/reviews_submit_button_submit"
        android:textColor="@drawable/submit_button_text_states"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/submit_button_states"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_submit_review_edittext_text" />


</androidx.constraintlayout.widget.ConstraintLayout>